# poco-multi-platform

linux-code/: main.cpp
multi-platform-code/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp
multi-platform-code/pocotest/: main.cpp
windows-code/: main.cpp
